# PDF-elaborations

./: .gitignore  main.py  pyproject.toml
